# Starlight-Common

./: CMakeLists.txt
cmake/: StarlightCommonConfig.cmake.in  starlight_commonConfig.cmake.in
include/star_common/: EventBus.hpp  FrameTracker.hpp  HandleTypeRegistry.hpp  IDeviceContext.hpp  IEvent.hpp  IRenderDevice.hpp  IRenderingDevice.hpp  IServiceCommand.hpp  Renderer.hpp  ServiceCallbackInfo.hpp  ServiceReply.hpp  SubscriberCallbackInfo.hpp  TypeRegistry.hpp  VulkanHelpers.hpp
include/star_common/helper/: CastHelpers.hpp  FileHelpers.hpp  PathHelpers.hpp
include/star_common/special_types/: SpecialHandleTypes.hpp
include/starlight/common/: Handle.hpp  HandleTypeRegistry.hpp  IDeviceContext.hpp  IEngineBuilder.hpp  IEvent.hpp  Renderer.hpp  SubscriberCallbackInfo.hpp
